fix too much spacing on top of accordian content NTI-476

--- a/css/partials/_accordion.scss
+++ b/css/partials/_accordion.scss
@@ -50,6 +50,7 @@
 
 .expandable .content {
 	padding: 1em 4em 2em;
+	margin-top: 0;
 	display: none;
 }
 
